--- a/Draw/ZhaJinHua/View/PokerView.xib
+++ b/Draw/ZhaJinHua/View/PokerView.xib
@@ -60,7 +60,7 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
-							<object class="IBUIImageView" id="780899144">
+							<object class="IBUIImageView" id="1073502811">
 								<reference key="NSNextResponder" ref="69953507"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 67}, {88, 100}}</string>
@@ -88,7 +88,7 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
-							<object class="IBUIImageView" id="330119777">
+							<object class="IBUIImageView" id="482894156">
 								<reference key="NSNextResponder" ref="69953507"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{89, 5}, {26, 27}}</string>
@@ -120,6 +120,7 @@
 					<bytes key="NSWhite">MQA</bytes>
 					<reference key="NSCustomColorSpace" ref="901000840"/>
 				</object>
+				<string key="IBUIRestorationIdentifier">PokerView</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 		</array>
@@ -161,7 +162,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">tickImageView</string>
 						<reference key="source" ref="191373211"/>
-						<reference key="destination" ref="330119777"/>
+						<reference key="destination" ref="482894156"/>
 					</object>
 					<int key="connectionID">150</int>
 				</object>
@@ -169,7 +170,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">bodyImageView</string>
 						<reference key="source" ref="191373211"/>
-						<reference key="destination" ref="780899144"/>
+						<reference key="destination" ref="1073502811"/>
 					</object>
 					<int key="connectionID">159</int>
 				</object>
@@ -358,11 +359,11 @@
 						<int key="objectID">17</int>
 						<reference key="object" ref="69953507"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="296082066">
+							<object class="IBNSLayoutConstraint" id="277361327">
 								<reference key="firstItem" ref="69953507"/>
 								<int key="firstAttribute">6</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="330119777"/>
+								<reference key="secondItem" ref="482894156"/>
 								<int key="secondAttribute">6</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
@@ -374,8 +375,8 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="25630871">
-								<reference key="firstItem" ref="330119777"/>
+							<object class="IBNSLayoutConstraint" id="441039581">
+								<reference key="firstItem" ref="482894156"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
 								<reference key="secondItem" ref="227539422"/>
@@ -390,8 +391,8 @@
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="345030389">
-								<reference key="firstItem" ref="780899144"/>
+							<object class="IBNSLayoutConstraint" id="782011266">
+								<reference key="firstItem" ref="1073502811"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
 								<reference key="secondItem" ref="69953507"/>
@@ -406,8 +407,8 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="826280202">
-								<reference key="firstItem" ref="780899144"/>
+							<object class="IBNSLayoutConstraint" id="545823496">
+								<reference key="firstItem" ref="1073502811"/>
 								<int key="firstAttribute">5</int>
 								<int key="relation">0</int>
 								<reference key="secondItem" ref="69953507"/>
@@ -569,8 +570,8 @@
 							<reference ref="227539422"/>
 							<reference ref="767743560"/>
 							<reference ref="397603727"/>
-							<reference ref="330119777"/>
-							<reference ref="780899144"/>
+							<reference ref="482894156"/>
+							<reference ref="1073502811"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
 					</object>
@@ -733,10 +734,10 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">142</int>
-						<reference key="object" ref="330119777"/>
+						<reference key="object" ref="482894156"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="497000981">
-								<reference key="firstItem" ref="330119777"/>
+							<object class="IBNSLayoutConstraint" id="935378543">
+								<reference key="firstItem" ref="482894156"/>
 								<int key="firstAttribute">8</int>
 								<int key="relation">0</int>
 								<nil key="secondItem"/>
@@ -746,13 +747,13 @@
 									<double key="value">27</double>
 								</object>
 								<float key="priority">1000</float>
-								<reference key="containingView" ref="330119777"/>
+								<reference key="containingView" ref="482894156"/>
 								<int key="scoringType">3</int>
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">1</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="176368623">
-								<reference key="firstItem" ref="330119777"/>
+							<object class="IBNSLayoutConstraint" id="934779419">
+								<reference key="firstItem" ref="482894156"/>
 								<int key="firstAttribute">7</int>
 								<int key="relation">0</int>
 								<nil key="secondItem"/>
@@ -762,7 +763,7 @@
 									<double key="value">26</double>
 								</object>
 								<float key="priority">1000</float>
-								<reference key="containingView" ref="330119777"/>
+								<reference key="containingView" ref="482894156"/>
 								<int key="scoringType">3</int>
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">1</int>
@@ -772,30 +773,30 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">144</int>
-						<reference key="object" ref="25630871"/>
+						<reference key="object" ref="441039581"/>
 						<reference key="parent" ref="69953507"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">147</int>
-						<reference key="object" ref="296082066"/>
+						<reference key="object" ref="277361327"/>
 						<reference key="parent" ref="69953507"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">148</int>
-						<reference key="object" ref="176368623"/>
-						<reference key="parent" ref="330119777"/>
+						<reference key="object" ref="934779419"/>
+						<reference key="parent" ref="482894156"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">149</int>
-						<reference key="object" ref="497000981"/>
-						<reference key="parent" ref="330119777"/>
+						<reference key="object" ref="935378543"/>
+						<reference key="parent" ref="482894156"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">151</int>
-						<reference key="object" ref="780899144"/>
+						<reference key="object" ref="1073502811"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="1007215484">
-								<reference key="firstItem" ref="780899144"/>
+							<object class="IBNSLayoutConstraint" id="538026389">
+								<reference key="firstItem" ref="1073502811"/>
 								<int key="firstAttribute">7</int>
 								<int key="relation">0</int>
 								<nil key="secondItem"/>
@@ -805,13 +806,13 @@
 									<double key="value">88</double>
 								</object>
 								<float key="priority">1000</float>
-								<reference key="containingView" ref="780899144"/>
+								<reference key="containingView" ref="1073502811"/>
 								<int key="scoringType">3</int>
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">1</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="256603945">
-								<reference key="firstItem" ref="780899144"/>
+							<object class="IBNSLayoutConstraint" id="998879538">
+								<reference key="firstItem" ref="1073502811"/>
 								<int key="firstAttribute">8</int>
 								<int key="relation">0</int>
 								<nil key="secondItem"/>
@@ -821,7 +822,7 @@
 									<double key="value">100</double>
 								</object>
 								<float key="priority">1000</float>
-								<reference key="containingView" ref="780899144"/>
+								<reference key="containingView" ref="1073502811"/>
 								<int key="scoringType">3</int>
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">1</int>
@@ -831,22 +832,22 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">154</int>
-						<reference key="object" ref="826280202"/>
+						<reference key="object" ref="545823496"/>
 						<reference key="parent" ref="69953507"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">156</int>
-						<reference key="object" ref="256603945"/>
-						<reference key="parent" ref="780899144"/>
+						<reference key="object" ref="998879538"/>
+						<reference key="parent" ref="1073502811"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">157</int>
-						<reference key="object" ref="1007215484"/>
-						<reference key="parent" ref="780899144"/>
+						<reference key="object" ref="538026389"/>
+						<reference key="parent" ref="1073502811"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">158</int>
-						<reference key="object" ref="345030389"/>
+						<reference key="object" ref="782011266"/>
 						<reference key="parent" ref="69953507"/>
 					</object>
 				</array>
@@ -871,8 +872,8 @@
 				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="142.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array class="NSMutableArray" key="142.IBViewMetadataConstraints">
-					<reference ref="176368623"/>
-					<reference ref="497000981"/>
+					<reference ref="934779419"/>
+					<reference ref="935378543"/>
 				</array>
 				<boolean value="NO" key="142.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="144.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -882,8 +883,8 @@
 				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="151.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array class="NSMutableArray" key="151.IBViewMetadataConstraints">
-					<reference ref="256603945"/>
-					<reference ref="1007215484"/>
+					<reference ref="998879538"/>
+					<reference ref="538026389"/>
 				</array>
 				<boolean value="NO" key="151.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="154.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -901,10 +902,10 @@
 					<reference ref="177987133"/>
 					<reference ref="1071240917"/>
 					<reference ref="339876293"/>
-					<reference ref="826280202"/>
-					<reference ref="345030389"/>
-					<reference ref="25630871"/>
-					<reference ref="296082066"/>
+					<reference ref="545823496"/>
+					<reference ref="782011266"/>
+					<reference ref="441039581"/>
+					<reference ref="277361327"/>
 				</array>
 				<boolean value="NO" key="17.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
